# libs-base

./: +cronscript  +crontab  +patch.sh  .clang-format  .cvsignore  .gitignore  .travis.yml  ANNOUNCE  AUTHORS  BUGS  BULLETIN  COPYING  COPYING.LIB  CREDITS  ChangeLog  ChangeLog.1  GNUmakefile  GNUstep-HOWTO  INSTALL  INSTALL.WIN32  MACHINES  MIGRATION-NSScriptingStepTalkBridge.md  MISSING  Makeconf  Makefile  Makefile.in  Makefile.local  Makefile.postamble  Makefile.sed.nt  NEWS  NSBundle.README  README  README.ULTRIX  README.first  README.foundation  README.initialize  README.md  README.threads  README.ucblib  RELEASE-NOTES  (+34 more)
Admin/: .cvsignore  GNUmakefile  HOWTO-patches  Makefile  Makefile.in  Makefile.postamble  example.patch  volunteers
Documentation/: .cvsignore  API-GAP-ANALYSIS.md  Base.gsdoc  Base.ispell  BaseAdditions.gsdoc  Functions.gsdoc  GNUmakefile  Makefile  Makefile.in  Makefile.postamble  NSZone.texi  OpenStepCompliance.gsdoc  README.initialize  ReleaseNotes.gsdoc  TypesAndConstants.gsdoc  advertisement.texi  announce.texi  announce.tmpl.texi  base-desc.texi  coding-standards.texi  coding-standards.tmpl.texi  exceptions.README  faq.texi  faq.tmpl.texi  gnustep-base.texi  gnustep-base.tmpl.texi  gnustep-faq.texi  gnustep-howto.texi  gnustep-howto.tmpl.texi  gnustep-zones.tmpl.texi  install.texi  install.tmpl.texi  libobjects.texi  machines.texi  manual.texi  manual.tmpl.texi  news.texi  news.tmpl.texi  objective-c.texi  readme.texi  (+5 more)
Examples/: .cvsignore  GNUmakefile  Makefile  Makefile.example.in  Makefile.in  Makefile.postamble  Makefile.preamble  configure.example.in  custom-zone.m  dictionary.m  diningPhilosophers.m  first-client.m  first-server.h  first-server.m  nsconnection.m  nsconnection_client.m  nsconnection_server.m  nx-client.m  nx-server.m  port-client.m  port-server.m  second-client.h  second-client.m  second-server.h  second-server.m  server.h  stdio-stream.m  textcoding.m
GSDoc/: GNUmakefile  GNUmakefile.local  Makefile.postamble  Makefile.preamble  README  gnustep.gsdoc  gsdoc-0_6_5.dtd  gsdoc.gsdoc  gsdoc.html  gsdoc.m
Headers/: module.modulemap
NSCharacterSets/: GNUmakefile  Makefile  Makefile.in  Makefile.postamble  README.CharSet
NSTimeZones/: GNUmakefile  Makefile  Makefile.postamble  NSTimeZones.tar
Old/: ArrayPrivate.h  Bag.h  Bag.m  BinaryCStream.h  CStreaming.h  CircularArray.h  Coder.m  CoderPrivate.h  Coding.h  Collection.h  DelegatePool.h  Dictionary.h  Dictionary.m  Enumerating.h  GapArray.h  GapArrayPrivate.h  Heap.h  IndexedCollection.h  Invocation.h  KeyedCollecting.h  KeyedCollection.m  LinkedList.h  LinkedList.m  LinkedListNode.h  Locking.h  MachPort.m  Magnitude.h  MappedCollector.m  MemoryStream.h  OldNSConnection.h  OldNSConnection.m  OldNSPortCoder.h  OldNSPortCoder.m  OrderedCollecting.h  OrderedCollection.h  Ordering.h  Queue.h  Queue.m  README  RNGAdditiveCongruential.h  (+21 more)
Resources/: GNUmakefile  GNUmakefile.postamble
SSL/: GNUmakefile  GSSSLHandle.m  GSUnixSSLHandle.m  Makefile.postamble  Makefile.preamble  config.h.in  configure  configure.ac  configure.in
Source/: .cvsignore  Archiver.m  Array.m  AutoreleasePool.m  AutoreleaseStack.m  Bag.m  Base.gsdoc  BinaryCStream.m  BinaryCoder.m  BinaryTree.m  BinaryTreeEltNode.m  BinaryTreeNode.m  CStream.m  CString.m  CXXException.m  Catch.m  CircularArray.m  Coder.m  Collection.m  CompatibilityHeaders.make  ConnectedCoder.m  Connection.m  ConstantString.m  Decoder.m  DelegatePool.m  Dictionary.m  DocMakefile  EltNodeCollector.m  Encoder.m  Exception.m  FastArray.x  FastMap.x  FoundationLegacySwiftCompatibility.m  GNUmakefile  GSArray.h  GSArray.m  GSAtomic.h  GSAttributedString.m  GSAvahiClient.h  GSAvahiClient.m  (+495 more)
Source/mframe/: .cvsignore  README  config.guess  configure  configure.ac  configure.in  mframe.foot  mframe.head
Source/mframe/alpha/: generic  linux-gnu
Source/mframe/hppa/: generic
Source/mframe/i386/: freebsd  generic  linux  sysv4.2MP  sysv4.2uw2.1.3
Source/mframe/powerpc/: darwin  generic  linux-gnu
Source/mframe/sparc/: generic  solaris2.6  sunos4.1.3
Source/mframe/sparc64/: openbsd
Source/mframe/unknown/: generic
Source/pathconfig/: configure  configure.ac  pathconfig.h.in  pathconfig.mak.in
Testing/: .cvsignore  .gdbinit  Catch_test.m  Exception_test.m  GNUmakefile  LoadMe.h  LoadMe.m  Makefile  Makefile.in  Makefile.nt  Makefile.postamble  Makefile.preamble  Makefile.sed.nt  MyCategory.h  MyCategory.m  NSData-test.m  Philosopher.h  Philosopher.m  README  SecondClass.h  SecondClass.m  awake.m  basic-old.m  basic.m  beh.m  benchmark.m  call.m  ccatch_test.c  client.m  coder.m  containers.m  create-abbrevs.m  create-regions.m  cstream.m  diningPhilosophers.m  exported-strings.m  float.c  fref.m  gsbehavior.m  gslock.m  (+70 more)
Tests/: GNUmakefile
Tools/: .cvsignore  AGSHtml.h  AGSHtml.m  AGSIndex.h  AGSIndex.m  AGSOutput.h  AGSOutput.m  AGSParser.h  AGSParser.m  AutoDocTemplate.gsdoc  BaseTools.gsdoc  DocMakefile  GNUmakefile  HTMLLinker.1  HTMLLinker.html  HTMLLinker.m  Makefile  Makefile.postamble  Makefile.preamble  NSPropertyList+PLUtil.h  NSPropertyList+PLUtil.m  autogsdoc.1  autogsdoc.m  basic-styles.css  classes.m  cvtenc.1  cvtenc.m  default-styles.css  defaults.1  defaults.m  dread.m  dremove.m  dwrite.m  gdnc.1  gdnc.h  gdnc.m  gdomap.8  gdomap.c  gdomap.gsdoc  gdomap.h  (+33 more)
autom4te.cache/: output.1  requests  traces.0  traces.1
base.xcodeproj/: project.pbxproj
config/: addlibrarypath.m4  codeset.m4  config.align.c  config.builtin_apply.c  config.constant-string-class.m  config.constant-string-encoding.c  config.ffi.c  config.forward.m  config.forward2.m  config.initialize.m  config.joinable.m  config.loadtest.m  config.nextcc.h  config.nextrt.m  config.non-fragile-ivars.m  config.objc.m  config.poll-dev.c  config.printf.c  config.proccmd.c  config.retframe.c  config.reuseaddr.c  config.setUncaughtExceptionHandler.m  config.trampoline.c  config.unexpected.m  config.vasprintf.c  config.vsprintf.c  config_thread.m  icu.m4  nextcc.m4  objc-common.g  objc-con-autoload.m4  objc-sys-dynamic.m4  pathtls.m4  pathxml.m4  procfs.m4  (+1 more)
(+1982 files in other folders)
